tests/EnvironmentTests/data/FuncOnlyReturnTest.stderr.expect
./data/FuncOnlyReturnTest.xpl:2:8: error: function declarations differ only in return type, first declared at:
  1:9: integer f(integer)
./data/FuncOnlyReturnTest.xpl:error: input contains errors
