tests/EnvironmentTests/data/FuncOnlyReturnTest.xpl
integer f(integer x) {}
node[] f(integer x) {}
